--- a/NoFood.Ionic/src/pages/categoria/categoria.html
+++ b/NoFood.Ionic/src/pages/categoria/categoria.html
@@ -14,5 +14,5 @@
 
 
 <ion-content padding>
-  <button ion-button block >Abrir Produto</button>
+  <button ion-button block (click)="abrirProduto">Abrir Produto</button>
 </ion-content>
