--- a/NoFood.Ionic/src/pages/login/login.html
+++ b/NoFood.Ionic/src/pages/login/login.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <button ion-button block>
+  <button ion-button block (click)="abrirCategoria()">
       Efetuar Login
   </button>
 </ion-content>
