--- a/NoFood.Ionic/src/pages/tabs/tabs.html
+++ b/NoFood.Ionic/src/pages/tabs/tabs.html
@@ -1,18 +1,5 @@
-<!--
-  Generated template for the TabsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
-
-  <ion-navbar>
-    <ion-title>tabs</ion-title>
-  </ion-navbar>
-
-</ion-header>
-
-
-<ion-content padding>
-
-</ion-content>
+<ion-tabs>
+  <ion-tab tabIcon="" tabTitle="Categorias" [root]=""></ion-tab>
+  <ion-tab tabIcon="" tabTitle="Meus Pedidos" [root]=""></ion-tab>
+  <ion-tab tabIcon="" tabTitle="Minha Conta" [root]=""></ion-tab>
+</ion-tabs>
