--- a/NoFood.Ionic/src/pages/tabs/tabs.html
+++ b/NoFood.Ionic/src/pages/tabs/tabs.html
@@ -1,5 +1,5 @@
 <ion-tabs>
-  <ion-tab tabIcon="" tabTitle="Categorias" [root]=""></ion-tab>
-  <ion-tab tabIcon="" tabTitle="Meus Pedidos" [root]=""></ion-tab>
-  <ion-tab tabIcon="" tabTitle="Minha Conta" [root]=""></ion-tab>
+  <ion-tab tabIcon="pricetags" tabTitle="Categorias" [root]=""></ion-tab>
+  <ion-tab tabIcon="menu" tabTitle="Meus Pedidos" [root]=""></ion-tab>
+  <ion-tab tabIcon="contact" tabTitle="Minha Conta" [root]=""></ion-tab>
 </ion-tabs>
