Retornando para a tela de Categorias

--- a/NoFood.Ionic/src/pages/tabs/tabs.html
+++ b/NoFood.Ionic/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs #mainTabs (tap)="select()">
+<ion-tabs>
   <ion-tab tabIcon="pricetags" tabTitle="Categoria" (ionSelect)="selecionarCategoria($event)" [root]="'ProdutosPage'"></ion-tab>
   <ion-tab tabIcon="menu" tabTitle="Meus Pedidos" [root]="'MeusPedidosPage'"></ion-tab>
   <ion-tab tabIcon="contact" tabTitle="Minha Conta" [root]="'MinhaContaPage'"></ion-tab>
